--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .Rproj.user
 .Rhistory
 .RData
-inst/extdata/gg_13_5.fasta.gz
 inst/extdata/gg_13_5.sqlite3
-inst/extdata/gg_13_5_taxonomy.txt.gz
+inst/extdata/gg_13_5_seq.rds
 
