--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: greengenes13.5MgDb
 Title: Greengenes 13.5 16S rRNA Database Annotation Data
-Version: 1.0.0
+Version: 1.9.0
 Author: Nathan D. Olson <nolson@umias.umd.edu>,
     Joseph Nathaniel Paulson,
     Hector Corrada-Bravo
@@ -9,12 +9,12 @@ Description: Metagenome annotation package with for the Greengenes
     16S rRNA Database version 13.5. Contains a MgDb-class object,
     defined in the metagenomeFeatures package.
 Depends:
-    R (>= 3.3.0)
+    R (>= 3.3.0), methods
 License: Artistic-2.0
 LazyData: true
 Imports:
     metagenomeFeatures
 URL: https://github.com/HCBravoLab/greengenes13.5MgDb
 BugReports: https://github.com/HCBravoLab/greengenes13.5MgDb/issues
-biocViews: AnnotationData, Microbiome, Metagenomics, Sequencing
+biocViews: AnnotationData
 RoxygenNote: 5.0.1
