--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Depends:
 License: Artistic-2.0
 LazyData: true
 Imports:
-    metagenomeFeatures
+    metagenomeFeatures (>= 1.9.9)
 URL: https://github.com/HCBravoLab/greengenes13.5MgDb
 BugReports: https://github.com/HCBravoLab/greengenes13.5MgDb/issues
 biocViews: AnnotationData
