--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,12 @@ Description: Metagenome annotation package with for the Greengenes
     16S rRNA Database version 13.5. Contains a MgDb-class object,
     defined in the metagenomeFeatures package.
 Depends:
-    R (>= 3.3.0), methods
+    R (>= 3.4.0), methods
 License: Artistic-2.0
 LazyData: true
 Imports:
     metagenomeFeatures (>= 1.9.9)
 URL: https://github.com/HCBravoLab/greengenes13.5MgDb
 BugReports: https://github.com/HCBravoLab/greengenes13.5MgDb/issues
-biocViews: AnnotationData
-RoxygenNote: 5.0.1
+biocViews: AnnotationData, Microbiome, Metagenomics, Annotation, Infrastructure
+RoxygenNote: 6.0.1
